--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Quicksand';
-    font-size: 13px;
+    font-size: 2.3vh;
     font-weight: bold;
     background-color: #f9e9ea;
     color: white;
@@ -42,14 +42,6 @@ li a.active {
     color: #ceeeed;
 }
 
-.navbarcontainer p{
-    font-family: 'rochester';
-    font-weight: normal;
-    font-size: 25px;
-    float: right;
-    padding-left: 7vh;
-}
-
 .navbarcontainer {
     display: flex;
     flex-direction: row-reverse;
@@ -86,6 +78,8 @@ li a.active {
 
 #bubbleDraw{
     padding-left: 20vh;
+    height: 90vh;
+    align-self: center;
 }
 
 #products{
@@ -94,10 +88,38 @@ li a.active {
 
 .bannerContainer button{
     font-family: inherit;
+    font-size: 2.2vh;
     font-weight: bold;
     margin: 2vh;
     border: none;
     color: white;
     background-color: transparent;
     border: solid 2px white;
+    padding: 1.5vh 5vh;
+    border-radius: 5vh;
+}
+
+.bannerContainer button:hover{
+    background-color: white;
+    color: #f3848d;
+}
+
+#arrow{
+    position: absolute;
+    bottom: 0%;
+    right: 50%;
+    width: 13vh;
+}
+
+.banner{
+    position: relative;
+}
+
+#Bubbles{
+    font-family: 'rochester';
+    font-weight: normal;
+    font-size: 4vh;
+    padding-left: 7vh;
+    margin-top: -3vh;
+    position: absolute;
 }
