--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
     font-size: 2.3vh;
     font-weight: bold;
     background-color: #f9e9ea;
-    color: white;
+    color: #f3848d;
 } 
 
 /* navbar */
@@ -13,6 +13,7 @@ html, body {
 .navbar {
     display: flex;
     flex-direction: row-reverse;
+    padding-right: 5vh;
 }
 
 ul {
@@ -56,6 +57,7 @@ li a.active {
     background-color: #f3848d;
     height: 93vh;
     display: flex;
+    color: white;
 }
 
 #title {
@@ -80,6 +82,7 @@ li a.active {
     padding-left: 20vh;
     height: 90vh;
     align-self: center;
+    margin-right: 10vh;
 }
 
 #products{
@@ -122,4 +125,6 @@ li a.active {
     padding-left: 7vh;
     margin-top: -3vh;
     position: absolute;
+    color: white;
 }
+
